--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,8 @@ export(calc_polynomial_trend_surface)
 export(calc_saturated_thickness)
 export(knn_point_smoother)
 export(plotResiduals)
-export(scrapeHighPlainsAquiferBoundary)
-export(scrapeNed)
-export(scrapeWellPointData)
-export(unpackBaseElevation)
-export(unpackHighPlainsAquiferBoundary)
+export(scrape_high_plains_aquifer_boundary)
+export(scrape_ned)
+export(scrape_well_point_data)
+export(unpack_base_elevation)
+export(unpack_high_plains_aquifer_boundary)
